[package]
name = "fediblablag"
version = "0.1.0"
edition = "2021"

[dependencies]
comrak = { version = "0.20.0", default-features = false }
dotenv = "0.15.0"
elefren = "0.22.0"
env_logger = "0.10.1"
fancy-regex = "0.13.0"
log = "0.4.20"
serde = { version = "1.0.194", features = ["serde_derive"] }
serde_yaml = "0.9.30"
